--- a/configs/agents/gemini_cli.yaml
+++ b/configs/agents/gemini_cli.yaml
@@ -1,6 +1,7 @@
 name: gemini_cli
 plugin: gemini_cli
-command: ["gemini-cli", "--repo", "{repo_path}", "--prompt", "{prompt}"]
+command: ["gemini-cli", "--repo", "{repo_path}", "--prompt", "{agent_prompt}"]
 output_mode: stdout
+output_parser: unified_diff_auto
 missing_tool_behavior: skip
 timeout_sec: 300
