--- a/configs/agents/minisweagent.yaml
+++ b/configs/agents/minisweagent.yaml
@@ -1,6 +1,7 @@
 name: minisweagent
 plugin: minisweagent
-command: ["minisweagent", "--repo", "{repo_path}", "--prompt", "{prompt}"]
+command: ["minisweagent", "--repo", "{repo_path}", "--prompt", "{agent_prompt}"]
 output_mode: stdout
+output_parser: unified_diff_auto
 missing_tool_behavior: skip
 timeout_sec: 300
