--- a/configs/agents/sweagent.yaml
+++ b/configs/agents/sweagent.yaml
@@ -1,6 +1,7 @@
 name: sweagent
 plugin: sweagent
-command: ["sweagent", "--repo", "{repo_path}", "--prompt", "{prompt}"]
+command: ["sweagent", "--repo", "{repo_path}", "--prompt", "{agent_prompt}"]
 output_mode: stdout
+output_parser: unified_diff_auto
 missing_tool_behavior: skip
 timeout_sec: 300
