--- a/configs/baselines/structural_misalignment_test.yaml
+++ b/configs/baselines/structural_misalignment_test.yaml
@@ -9,7 +9,7 @@ parsers:
   patch: cfg_ast          # Default patch parser
   linking: llm_grounding  # Default linker
 
-model_path: data/models/structural_misalignment/structural_combined
+model_path: data/models/structural_misalignment/full_universal
 threshold: 0.5
 decision_policy: reject_if_score_ge_threshold
 severity_mode: universal
@@ -20,6 +20,12 @@ mask_tokens: true
 comment_stripping_mode: python_tokenize
 allow_provider_fallback: false
 allow_provider_fallback_on_toy: true
+
+# NEW: Feature mismatch guard (default: 0.05, when not provided)
+# Raises error if >5% of model's expected features are missing from extracted features.
+# Set to 1.0 to disable, 0.0 to require exact match.
+max_feature_mismatch_ratio: 0.05
+
 llm:
   provider: openai
   model: gpt-4o-mini
