--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -22,6 +22,10 @@ llm = [
   "openai>=1.0",
   "anthropic>=0.34",
   "google-generativeai>=0.7.0",
+]
+embeddings = [
+  "torch>=2.2",
+  "transformers>=4.40",
 ]
 
 [tool.setuptools]
